[gd_scene load_steps=9 format=3 uid="uid://f7yllpirwvd"]

[ext_resource type="Script" path="res://scripts/Lever.gd" id="1_b51c6"]
[ext_resource type="Texture2D" uid="uid://c2dd680hfbv4b" path="res://interactables/placeholders/lever/leverOff.png" id="2_48xvb"]
[ext_resource type="Texture2D" uid="uid://b6olgv3u3i08v" path="res://interactables/placeholders/lever/leverOn.png" id="3_l5gjl"]
[ext_resource type="PackedScene" uid="uid://x604bx5ud76o" path="res://scenes/ui/interact_prompt.tscn" id="4_h2gpn"]
[ext_resource type="AudioStream" uid="uid://cwhcnug2i3cwi" path="res://sounds/lever.mp3" id="5_hexav"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bmvbm"]
radius = 51.44

[sub_resource type="SpriteFrames" id="SpriteFrames_5m52k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_48xvb")
}, {
"duration": 1.0,
"texture": ExtResource("3_l5gjl")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1outf"]
size = Vector2(28, 16)

[node name="Lever" type="StaticBody2D" node_paths=PackedStringArray("leversound")]
collision_layer = 2
script = ExtResource("1_b51c6")
leversound = NodePath("AudioStreamPlayer")

[node name="Area" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="Area"]
shape = SubResource("CircleShape2D_bmvbm")

[node name="LeverState" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5m52k")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_1outf")

[node name="InteractPrompt" parent="." instance=ExtResource("4_h2gpn")]
position = Vector2(0, -94)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hexav")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_area_body_exited"]
